# Sextans

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  link_config.ini
U250/: Makefile
U250/src/: host.cpp  sextans.cpp  sparse_helper.h
U280/: Makefile
U280/bitstream/: sextans.xclbin.info
U280/bulk/: Makefile  host_bulk.cpp  run.sh
U280/src/: host.cpp  sextans.cpp
bitstream/: Sextans_floorplan.tcl  Sextans_xilinx_u280_xdma_201920_3.xclbin.info  link_config.ini  run_tapa_hls.sh
matrices/nasa4704/: nasa4704.mtx
src/: host.cpp  sextans-host.cpp  sextans.cpp  sextans.h  sparse_helper.h
